# virtual_spike_in

./: .envrc  .gitignore  .python-version  README.md  flake.nix  overlay.nix  pyproject.toml  shell.nix  sync.sh
pipeline/: README.md  main.nf  nextflow.config  run.sh  run_spikein.sh
pipeline/conf/: example.config  spikein.config
src/additional_experiments/: compare_experiments.R  compare_replicates.R  fetch_data.sh  group_replicates.R  move_data_for_replicates.sh  move_sras_for_singlepaired.sbatch  run_vsi_all_experiments.sh
src/drosophila/: calc_maximal_isoform.sbatch  gen_featurecounts.sbatch  sub_max_isoform.sbatch
src/dukler/: all_millionsmapped.txt  check_lit_spikein_ratio.r  compare_model_and_bulk.R  count_deseq2_samples.py  drosophila_pipeline.sh  fastestq_dump.sbatch  gen_comparison_plots.r  gen_comparison_plots_newmodel.r  get_files.sbatch  log_of_normal.r  mapped_ratio.txt  random_deseq2_sample.R  size_factor_titrations.R  srrs.txt  subsample_crams.sbatch
src/human/: calc_maximal_isoform.sbatch  check_long_gene_ends.r  comparison_graphs.r  filter_for_normalization.sbatch  gene_lengths.r  sub_max_isoform.sbatch  virtual_spike_in.py
supplemental_data/: Dukler2017nascent_human_counts.txt
virtual_spike_in/: main.py  virtual_spike_in.py
