[tool.poetry]
name = "virtual_spike_in"
version = "0.1.0"
description = "Virtual Spike-In Method"
authors = ["Zach Maas <zach.maas@gmail.com>"]
license = "gpl3"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
pandas = "^1.0.1"
arviz = "^0.7.0"
pymc3 = "^3.8"
pyqt5 = "^5.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
