[tool.poetry]
name = "virtual_spike_in"
version = "0.1.0"
description = "Virtual Spike-In Method"
authors = ["Zach Maas <zach.maas@gmail.com>"]
license = "gpl3"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.18.1"
scipy = "^1.7.0"
pandas = "^1.0.1"
pymc = "^4"
aesara = "^2.5.3"
tqdm = "^4.63.0"
typer = "^0.4.0"
click = "^8.0.4"
graphviz = "^0.19.1"
pymc3 = "^3.11.5"
jax = "^0.3.15"
jaxlib = "^0.3.15"
numpyro = "^0.10.0"
sklearn = "^0.0"
setuptools = "^63.4.3"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.4.1"}
pep8 = "^1.7.1"
black = "^22.1.0"
ipython = "^8.2.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
virtualspikein = 'virtualspikein:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
